# bogie

./: Cargo.toml  LICENSE.md  README.md  cliff.toml
bogie/: Cargo.toml
bogie/src/: lib.rs
bogie/tests/: structs.rs
bogie_core/: Cargo.toml  README.md
bogie_core/src/: lib.rs
bogie_derive/: Cargo.toml  README.md
bogie_derive/src/: attributes.rs  lib.rs  process_struct.rs  process_union.rs
bogie_derive/src/process_enum/: mod.rs  named.rs  unnamed.rs
