[package]
name = "bogie_derive"
version = "0.1.0"
authors = ["OwOchlé <romeoboub@gmail.com>"]
description = "Macro crate for bogie"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/owochle/bogie"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"